--- a/skin.css
+++ b/skin.css
@@ -1,3 +1,6 @@
+#myElement{
+	text-align: center;
+}
 .jwplayer .jw-skin-myskin .jw-display-icon-container {
     border-style: solid;
     border-width: medium;
