--- a/skin.css
+++ b/skin.css
@@ -2,8 +2,14 @@ body{
 	text-align: center;
 }
 .jwplayer .jw-skin-myskin .jw-display-icon-container {
+
     border-style: solid;
     border-width: medium;
     border-radius: 50%;
     padding:1em; 
+}
+
+.jwplayer .jw-skin-myskin .jw-background-color {
+	
+	color: #9a94eb;
 }
