--- a/skin.css
+++ b/skin.css
@@ -22,12 +22,12 @@ Using Release Channels
 JW Player 7
 JW Player 6 (Legacy)
 Overview
-Here is the CSS used by JW Player 7 to render the seven skin. This skin is designed to fit any website with just a few quick color changes and is built into the player itself. You can use this skin as a reference for building out your own custom CSS.
+Here is the CSS used by JW Player 7 to render the mkgo skin. This skin is designed to fit any website with just a few quick color changes and is built into the player itself. You can use this skin as a reference for building out your own custom CSS.
 
 Creating Your Own CSS
 
 Duplicate the CSS from this reference.
-Replace all mentions of "seven" with your custom skin name.
+Replace all mentions of "mkgo" with your custom skin name.
 Make any changes and customizations that you require.
 Host your CSS file on your web server.
 Include your CSS in the head of your page or provide JW Player with the URL in setup.
@@ -57,172 +57,172 @@ Sample Skin
 }
 
 /* Use this class to set a global background color for all elemnts. */
-.jw-skin-seven .jw-background-color {
-  background: #000;
+.jw-skin-mkgo .jw-background-color {
+  background: #9a94eb;
 }
 
 /* This is the class that houses all controls. Use this to adjust the appearance of the entire controlbar. */
-.jw-skin-seven .jw-controlbar {
+.jw-skin-mkgo .jw-controlbar {
   border-top: #333 1px solid;
   height: 2.5em;
 }
 
 /* Vertically aligns the timeslider and icons in the center of the controlbar. */
-.jw-skin-seven .jw-group {
+.jw-skin-mkgo .jw-group {
   vertical-align: middle;
 }
 
 /* Sets the style for the visual playlist. */
 
-.jw-skin-seven .jw-playlist {
+.jw-skin-mkgo .jw-playlist {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Aligns the visual playlist above its icon. */
 
-.jw-skin-seven .jw-playlist-container {
+.jw-skin-mkgo .jw-playlist-container {
   left: -43%;
   background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Sets the style for the visual playlist items. */
-.jw-skin-seven .jw-playlist-container .jw-option {
+.jw-skin-mkgo .jw-playlist-container .jw-option {
   border-bottom: 1px solid #444;
 }
 
 /* Allows you to adjust the color of the playlist item when hovering and has a different active style.*/
 
-.jw-skin-seven .jw-playlist-container .jw-option:hover,
-.jw-skin-seven .jw-playlist-container .jw-option.jw-active-option {
+.jw-skin-mkgo .jw-playlist-container .jw-option:hover,
+.jw-skin-mkgo .jw-playlist-container .jw-option.jw-active-option {
   background-color: black;
 }
 
 /* Changes the color of the label when hovering.*/
 
-.jw-skin-seven .jw-playlist-container .jw-option:hover .jw-label {
+.jw-skin-mkgo .jw-playlist-container .jw-option:hover .jw-label {
   color: #ff0046;
 }
 
 /* Aligns the playlist header icon with the items in the playlist. */
-.jw-skin-seven .jw-playlist-container .jw-icon-playlist {
+.jw-skin-mkgo .jw-playlist-container .jw-icon-playlist {
   margin-left: 0;
 }
 
 /* Sets the color of the play icon of the currently playing playlist item.*/
-.jw-skin-seven .jw-playlist-container .jw-label .jw-icon-play {
+.jw-skin-mkgo .jw-playlist-container .jw-label .jw-icon-play {
   color: #ff0046;
 }
 
 /* Aligns the playlist play icon with the items in the playlist. */
-.jw-skin-seven .jw-playlist-container .jw-label .jw-icon-play:before {
+.jw-skin-mkgo .jw-playlist-container .jw-label .jw-icon-play:before {
     padding-left: 0
 }
 
 /* Sets the color of the playlist title */
-.jw-skin-seven .jw-tooltip-title {
+.jw-skin-mkgo .jw-tooltip-title {
     background-color: #000;
     color: #fff
 }
 
 /* Style for playlist item, current time, qualities, and caption text.*/
-.jw-skin-seven .jw-text {
+.jw-skin-mkgo .jw-text {
   color: #ffffff;
 }
 
 /* Color for all buttons when they are inactive. This is over-ridden with the 
 inactive configuration in the skin block.*/
-.jw-skin-seven .jw-button-color {
+.jw-skin-mkgo .jw-button-color {
   color: #ffffff;
 }
 
 /* Color for all buttons for when they are hovered on. This is over-ridden with the 
 active configuration in the skin block.*/
 
-.jw-skin-seven .jw-button-color:hover {
+.jw-skin-mkgo .jw-button-color:hover {
   color: #ff0046;
 }
 
 /* Color for when HD/CD icons are toggled on. */
-.jw-skin-seven .jw-toggle {
+.jw-skin-mkgo .jw-toggle {
   color: #ff0046;
 }
 
 /* Color for when HD/CD icons are toggled off. */
-.jw-skin-seven .jw-toggle.jw-off {
+.jw-skin-mkgo .jw-toggle.jw-off {
   color: #ffffff;
 }
 
 /* Sets spacing between controlbar icons and text */
-.jw-skin-seven .jw-controlbar .jw-icon:before,
-.jw-skin-seven .jw-text-elapsed,
-.jw-skin-seven .jw-text-duration {
+.jw-skin-mkgo .jw-controlbar .jw-icon:before,
+.jw-skin-mkgo .jw-text-elapsed,
+.jw-skin-mkgo .jw-text-duration {
     padding: 0 .7em;
 }
 
 /* Removes icon padding to align the playlist header icon with the items in the playlist. */
-.jw-skin-seven .jw-controlbar .jw-icon-prev:before {
+.jw-skin-mkgo .jw-controlbar .jw-icon-prev:before {
     padding-right: .25em;
 }
 
 /* Removes icon padding to align the playlist header icon with the items in the playlist. */
-.jw-skin-seven .jw-controlbar .jw-icon-playlist:before {
+.jw-skin-mkgo .jw-controlbar .jw-icon-playlist:before {
     padding: 0 .45em;
 }
 
-.jw-skin-seven .jw-controlbar .jw-icon-next:before {
+.jw-skin-mkgo .jw-controlbar .jw-icon-next:before {
     padding-left: .25em
 }
 
 /* Sets the style for the prev and next icons. */
-.jw-skin-seven .jw-icon-prev,
-.jw-skin-seven .jw-icon-next {
+.jw-skin-mkgo .jw-icon-prev,
+.jw-skin-mkgo .jw-icon-next {
     font-size: .7em
 }
 
 /* Adds the spacer style to between the play icon and the previous icon. */
-.jw-skin-seven .jw-icon-prev:before {
+.jw-skin-mkgo .jw-icon-prev:before {
   border-left: 1px solid #666;
 }
 
 /* Adds the spacer style to between the next item and current time.  */
-.jw-skin-seven .jw-icon-next:before {
+.jw-skin-mkgo .jw-icon-next:before {
   border-right: 1px solid #666;
 }
 
 /* Color of the display icon */
-.jw-skin-seven .jw-icon-display {
+.jw-skin-mkgo .jw-icon-display {
   color: #fff;
 }
 
 /* Centers the display icon in it's container */
-.jw-skin-seven .jw-icon-display:before {
+.jw-skin-mkgo .jw-icon-display:before {
   padding-left: 0;
 }
 
 /* Turns the display icon container into a circle. */
-.jw-skin-seven .jw-display-icon-container {
+.jw-skin-mkgo .jw-display-icon-container {
     border-radius: 50%;
     border: 1px solid #333
 }
 
 /* Styles the timeslider rail */
-.jw-skin-seven .jw-rail {
+.jw-skin-mkgo .jw-rail {
   background-color: #384154;
   box-shadow: none;
 }
 
 /* Sets the color for the buffer of the timeslider rail. */
-.jw-skin-seven .jw-buffer {
+.jw-skin-mkgo .jw-buffer {
     background-color: #666f82
 }
 
 /* Sets the style for the elaspesd progress. */
-.jw-skin-seven .jw-progress {
+.jw-skin-mkgo .jw-progress {
     background: #ff0046
 }
 
 /* Sets the width of the knob's container */
-.jw-skin-seven .jw-knob {
+.jw-skin-mkgo .jw-knob {
     width: .6em;
     height: .6em;
     background-color: #fff;
@@ -231,25 +231,25 @@ active configuration in the skin block.*/
 }
 
 /* Sets the height for the horizontal slider container. */
-.jw-skin-seven .jw-slider-horizontal .jw-slider-container {
+.jw-skin-mkgo .jw-slider-horizontal .jw-slider-container {
     height: .95em
 }
 
 /* Sets the height for the horizontal slider elements. */
-.jw-skin-seven .jw-slider-horizontal .jw-rail,
-.jw-skin-seven .jw-slider-horizontal .jw-buffer,
-.jw-skin-seven .jw-slider-horizontal .jw-progress {
+.jw-skin-mkgo .jw-slider-horizontal .jw-rail,
+.jw-skin-mkgo .jw-slider-horizontal .jw-buffer,
+.jw-skin-mkgo .jw-slider-horizontal .jw-progress {
     height: .2em;
     border-radius: 0
 }
 
 /* Centers the knob vertically. */
-.jw-skin-seven .jw-slider-horizontal .jw-knob {
+.jw-skin-mkgo .jw-slider-horizontal .jw-knob {
     top: -0.19999999999999998em
 }
 
 /* Cetners the timeslider cuepoints vertically. */
-.jw-skin-seven .jw-slider-horizontal .jw-cue {
+.jw-skin-mkgo .jw-slider-horizontal .jw-cue {
     top: -0.04999999999999999em;
     width: .3em;
     height: .3em;
@@ -258,91 +258,91 @@ active configuration in the skin block.*/
 }
 
 /* Sets the width for the vertical slider elements. */
-.jw-skin-seven .jw-slider-vertical .jw-rail,
-.jw-skin-seven .jw-slider-vertical .jw-buffer,
-.jw-skin-seven .jw-slider-vertical .jw-progress {
+.jw-skin-mkgo .jw-slider-vertical .jw-rail,
+.jw-skin-mkgo .jw-slider-vertical .jw-buffer,
+.jw-skin-mkgo .jw-slider-vertical .jw-progress {
     width: .2em
 }
 
 /* Sets the position of the volume slider container. */
-.jw-skin-seven .jw-volume-tip {
+.jw-skin-mkgo .jw-volume-tip {
     width: 100%;
     left: -45%;
     padding-bottom: .7em
 }
 
 /* Sets the color of the duration text in the controlbar. */
-.jw-skin-seven .jw-text-duration {
+.jw-skin-mkgo .jw-text-duration {
     color: #666f82
 }
 
 /* Adds a left border as a spacer between all controlbar icons. */
-.jw-skin-seven .jw-controlbar-right-group .jw-icon-tooltip:before,
-.jw-skin-seven .jw-controlbar-right-group .jw-icon-inline:before {
+.jw-skin-mkgo .jw-controlbar-right-group .jw-icon-tooltip:before,
+.jw-skin-mkgo .jw-controlbar-right-group .jw-icon-inline:before {
     border-left: 1px solid #666
 }
 
 /* Removes the border from the first icon after the time duration text. */
-.jw-skin-seven .jw-controlbar-right-group .jw-icon-inline:first-child:before {
+.jw-skin-mkgo .jw-controlbar-right-group .jw-icon-inline:first-child:before {
     border: 0
 }
 
 /* This styles the dock icons into a circle. */
-.jw-skin-seven .jw-dock .jw-dock-button {
+.jw-skin-mkgo .jw-dock .jw-dock-button {
     border-radius: 50%;
     border: 1px solid #333
 }
 
 /* This styles tooltip for dock text background. */
-.jw-skin-seven .jw-dock .jw-overlay {
+.jw-skin-mkgo .jw-dock .jw-overlay {
     border-radius: 2.5em
 }
 
 /*This sets the font color and background color for the active item in HD and CC menus. */
-.jw-skin-seven .jw-icon-tooltip .jw-active-option {
+.jw-skin-mkgo .jw-icon-tooltip .jw-active-option {
     background-color: #ff0046;
     color: #fff
 }
 
 /* Sets a min width for the volume container so that when it changes between mute and volume, the controlbar does not shift. */
-.jw-skin-seven .jw-icon-volume {
+.jw-skin-mkgo .jw-icon-volume {
     min-width: 2.6em
 }
 
 /* Sets the style for the time tooltip, menu, volume. */
-.jw-skin-seven .jw-time-tip,
-.jw-skin-seven .jw-menu,
-.jw-skin-seven .jw-volume-tip,
-.jw-skin-seven .jw-skip {
+.jw-skin-mkgo .jw-time-tip,
+.jw-skin-mkgo .jw-menu,
+.jw-skin-mkgo .jw-volume-tip,
+.jw-skin-mkgo .jw-skip {
     border: 1px solid #333
 }
 
 /* Sets the position for the time tooltip. */
-.jw-skin-seven .jw-time-tip {
+.jw-skin-mkgo .jw-time-tip {
     padding: .2em;
     bottom: 1.3em
 }
 
 /* Sets the position for the vertical volume slider. */
-.jw-skin-seven .jw-menu,
-.jw-skin-seven .jw-volume-tip {
+.jw-skin-mkgo .jw-menu,
+.jw-skin-mkgo .jw-volume-tip {
     bottom: .24em
 }
 
 /* Sets the shape of the skip icon. */
-.jw-skin-seven .jw-skip {
+.jw-skin-mkgo .jw-skip {
     padding: .4em;
     border-radius: 1.75em
 }
 
 /* Sets the style for the skip text. */
-.jw-skin-seven .jw-skip .jw-text,
-.jw-skin-seven .jw-skip .jw-icon-inline {
+.jw-skin-mkgo .jw-skip .jw-text,
+.jw-skin-mkgo .jw-skip .jw-icon-inline {
     color: #fff;
     line-height: 1.75em
 }
-.jw-skin-seven .jw-skip.jw-skippable:hover .jw-text,
-.jw-skin-seven .jw-skip.jw-skippable:hover .jw-icon-inline {
+.jw-skin-mkgo .jw-skip.jw-skippable:hover .jw-text,
+.jw-skin-mkgo .jw-skip.jw-skippable:hover .jw-icon-inline {
     color: #ff0046
 }
 
