--- a/skin.css
+++ b/skin.css
@@ -1,3 +1,6 @@
+body{
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%) no-repeat center center fixed;
+}
 #stars {
   content:" ";
   background: transparent;
